# Medici-Engine

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.agents/: DevPlan.md  Notes.md  Summary.md
.agents/plans/: feature1-core-conversation-engine.md  feature1-pbi-01-scaffold-and-config.md  feature1-pbi-02-database-layer.md  feature1-pbi-03-persona-library.md  feature1-pbi-04-conversation-engine.md  feature1-pbi-05-api-cli-integration.md  feature1-pbi-06-tests-and-validation.md  feature1-pbi1-scaffold-config.md  feature2-persona-library-expansion.md  feature3-milestone1-data-foundation.md  feature3-milestone3-integration.md  feature3-milestone4-testing-validation.md  feature4-milestone1-data-foundation.md  feature4-milestone2-scorer-core.md  feature4-milestone3-integration.md  feature4-milestone4-testing-validation.md  feature5-milestone1-foundation.md  feature5-milestone2-data-layer.md  feature5-milestone4-review-ui.md  feature5-review-ui-batch-setup.md  feature6-domain-expansion.md  feature6-milestone5-testing-validation.md  feature7-feedback-loop.md  feature7-milestone1-analytics-data-layer.md  feature7-milestone2-insights-ui.md  feature7-milestone3-informed-selection.md  phase1-core-conversation-engine.md
.claude/: settings.local.json
.claude/commands/: commit-push.md  execute.md  (+5 more)
scripts/: run_conversation.py
src/: config.py  main.py
tests/: conftest.py  test_api.py  test_batch.py  test_boundaries.py  test_config.py  test_db.py  test_domains.py  test_engine.py  test_insights.py  test_personas.py  test_scoring.py  test_synthesis.py  test_ui.py
(+58 files in other folders)
